added: preparation for Georgian translation

--- a/locales/src/en/translation.json
+++ b/locales/src/en/translation.json
@@ -303,6 +303,7 @@
         "he": "Hebrew",
         "hi": "Hindi",
         "it": "Italian",
+        "ka": "Georgian",
         "km": "Khmer",
         "lo": "Lao",
         "nl": "Dutch",
