changed: updated Georgian translation

--- a/locales/src/ka/translation.json
+++ b/locales/src/ka/translation.json
@@ -20,7 +20,7 @@
             "msg": "ამ აპლიკაციის ახალი ვერსია ჩამოიტვირთა. ამ ვერსიაზე გადასასვლელად, განაახლეთ გვერდი."
         },
         "closing": {
-            "heading": "დახურვა ..."
+            "heading": "იხურება..."
         },
         "default": {
             "button": "დახურვა",
@@ -136,8 +136,8 @@
     "confirm": {
         "autosaveload": {
             "heading": "ნაპოვნია შეუნახავი ჩანაწერი",
-            "msg": "პროგრამამ შეუნახავი ჩანაწერი იპოვა. გსურთ ამ ჩანაწერის ჩატვირთვა, თუ გინდათ მისი წაშლა?",
-            "negButton": "წაშლა",
+            "msg": "პროგრამამ იპოვნა შეუნახავი ჩანაწერი. გსურთ ამ ჩანაწერის ჩატვირთვა, თუ გინდათ მისი წაშლა?",
+            "negButton": "გაუქმება",
             "posButton": "ჩანაწერის ჩატვირთვა"
         },
         "default": {
@@ -197,7 +197,7 @@
         }
     },
     "constraint": {
-        "invalid": "ამ მნიშვნელობის შეტანა არ შეიძლება",
+        "invalid": "ამ მნიშვნელობის შეტანა არ არის დასაშვები",
         "required": "ეს ველი სავალდებულოა"
     },
     "contact": {
@@ -303,7 +303,7 @@
         "he": "ებრაული",
         "hi": "ჰინდი",
         "it": "იტალიური",
-        "ka": "Georgian",
+        "ka": "ქართული",
         "km": "ქმერული",
         "lo": "ლაოსური",
         "nl": "ნიდერლანდური",
