changed: prepared for Panjabi translation

--- a/locales/src/en/translation.json
+++ b/locales/src/en/translation.json
@@ -308,6 +308,7 @@
         "lo": "Lao",
         "nl": "Dutch",
         "no": "Norwegian",
+        "pa": "Panjabi",
         "pl": "Polish",
         "pt": "Portuguese",
         "ro": "Romanian",
